// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`LibreLinkClient should successfully login 1`] = `
{
  "accountType": "string",
  "communicationLanguage": "string",
  "consents": {
    "llu": {
      "policyAccept": "number",
      "touAccept": "number",
    },
  },
  "country": "string",
  "created": {},
  "dateFormat": "string",
  "dateOfBirth": {},
  "details": {},
  "devices": {},
  "email": "string",
  "emailDay": "array",
  "firstName": "string",
  "id": "string",
  "lastLogin": {},
  "lastName": "string",
  "practices": {},
  "programs": {},
  "system": {
    "messages": {
      "firstUsePhoenix": "number",
      "firstUsePhoenixReportsDataMerged": "number",
      "lluNewFeatureModal": "number",
      "lvWebPostRelease": "string",
    },
  },
  "timeFormat": "string",
  "twoFactor": {
    "primaryMethod": "string",
    "primaryValue": "string",
    "secondaryMethod": "string",
    "secondaryValue": "string",
  },
  "uiLanguage": "string",
  "uom": "string",
}
`;

exports[`LibreLinkClient should successfully fetch connections 1`] = `
{
  "0": {
    "alarmRules": {
      "c": "boolean",
      "f": {
        "d": "number",
        "th": "number",
        "thmm": "number",
        "tl": "number",
        "tlmm": "number",
      },
      "h": {
        "d": "number",
        "f": "number",
        "th": "number",
        "thmm": "number",
      },
      "l": {
        "d": "number",
        "on": "boolean",
        "th": "number",
        "thmm": "number",
        "tl": "number",
        "tlmm": "number",
      },
      "nd": {
        "i": "number",
        "l": "number",
        "r": "number",
      },
      "p": "number",
      "r": "number",
      "std": {},
    },
    "country": "string",
    "created": "number",
    "firstName": "string",
    "glucoseAlarm": "null",
    "glucoseItem": "null",
    "glucoseMeasurement": "null",
    "id": "string",
    "lastName": "string",
    "patientDevice": {
      "alarms": "boolean",
      "did": "string",
      "dtid": "number",
      "fixedLowAlarmValues": {
        "mgdl": "number",
        "mmoll": "number",
      },
      "fixedLowThreshold": "number",
      "hl": "number",
      "l": "boolean",
      "ll": "number",
      "u": "number",
      "v": "string",
    },
    "patientId": "string",
    "sensor": {
      "a": "number",
      "deviceId": "string",
      "lj": "boolean",
      "pt": "number",
      "s": "boolean",
      "sn": "string",
      "w": "number",
    },
    "status": "number",
    "targetHigh": "number",
    "targetLow": "number",
    "uom": "number",
  },
}
`;

exports[`LibreLinkClient should successfully read data 1`] = `
{
  "activeSensors": "array",
  "connection": {
    "alarmRules": {
      "c": "boolean",
      "f": {
        "d": "number",
        "th": "number",
        "thmm": "number",
        "tl": "number",
        "tlmm": "number",
      },
      "h": {
        "d": "number",
        "f": "number",
        "th": "number",
        "thmm": "number",
      },
      "l": {
        "d": "number",
        "on": "boolean",
        "th": "number",
        "thmm": "number",
        "tl": "number",
        "tlmm": "number",
      },
      "nd": {
        "i": "number",
        "l": "number",
        "r": "number",
      },
      "p": "number",
      "r": "number",
      "std": {},
    },
    "country": "string",
    "created": "number",
    "firstName": "string",
    "glucoseAlarm": "null",
    "glucoseItem": "null",
    "glucoseMeasurement": "null",
    "id": "string",
    "lastName": "string",
    "patientDevice": {
      "alarms": "boolean",
      "did": "string",
      "dtid": "number",
      "fixedLowAlarmValues": {
        "mgdl": "number",
        "mmoll": "number",
      },
      "fixedLowThreshold": "number",
      "hl": "number",
      "l": "boolean",
      "ll": "number",
      "u": "number",
      "v": "string",
    },
    "patientId": "string",
    "sensor": {
      "a": "number",
      "deviceId": "string",
      "lj": "boolean",
      "pt": "number",
      "s": "boolean",
      "sn": "string",
      "w": "number",
    },
    "status": "number",
    "targetHigh": "number",
    "targetLow": "number",
    "uom": "number",
  },
  "graphData": "array",
}
`;
